# eurathlon_tradr_2016

./: CMakeLists.txt  README.md  package.xml
cfg/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navfn_global_planner.yaml
launch/: bag2pointcloud.launch  move_base.launch  navigation_sim.launch  octomap_mapping.launch
src/: marker.py  pcl_filter.cpp  velocity_conversion.cpp
